<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipesBackButton"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipesActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recipeRecyclerView"
        android:layout_width="407dp"
        android:layout_height="474dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        tools:listitem="@layout/cardviewlayout" />

    <TextView
        android:id="@+id/addRecipeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Add_Recipes_Prompt"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/searchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="185dp"
        android:layout_marginBottom="11dp"
        android:ems="10"
        android:hint="@string/Search"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/recipeRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeTextView"
        app:layout_constraintVertical_bias="0.571" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="264dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="5dp"
        android:text="@string/Enter"
        app:layout_constraintBottom_toTopOf="@+id/recipeRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addRecipeTextView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/RecipeHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="318dp"
        android:text="@string/Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>