<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRecipeActivity">

    <ImageView
        android:id="@+id/recipeAddImageView"
        android:layout_width="265dp"
        android:layout_height="169dp"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="457dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/addRecipeTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="33dp"
        android:fontFamily="serif-monospace"
        android:text="TextView"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/recipeAddImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/daysSpinner"
        android:layout_width="378dp"
        android:layout_height="41dp"
        android:layout_marginTop="455dp"
        android:layout_marginBottom="229dp"
        android:fontFamily="serif-monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="386dp"
        android:layout_height="147dp"
        android:layout_marginTop="507dp"
        android:layout_marginBottom="74dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/breakfastradioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:fontFamily="serif-monospace"
            android:text="Breakfast"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/lunchRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="Lunch"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/dinnerRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif-monospace"
            android:text="Dinner"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/servingsTextView"
        android:layout_width="165dp"
        android:layout_height="28dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="256dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif-monospace"
        android:text="Servings:"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cookTimeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeAddImageView" />

    <TextView
        android:id="@+id/cookTimeTextView"
        android:layout_width="230dp"
        android:layout_height="23dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="serif-monospace"
        android:text="Cook Time:                  "
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/daysSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servingsTextView" />

    <TextView
        android:id="@+id/directionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="serif-monospace"
        android:text="@string/Add_Recipes_Prompt"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/daysSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cookTimeTextView"
        app:layout_constraintVertical_bias="0.4" />

    <Button
        android:id="@+id/addtoPlanButton"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="19dp"
        android:text="@string/Add_to_Plan"
        android:textSize="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/addRecipeHomeButton2"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="19dp"
        android:text="@string/Home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addtoPlanButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/addRecipesRecipesButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="19dp"
        android:text="@string/Recipes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/addtoPlanButton"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>